--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -1,20 +1,19 @@
----
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: cleanup
-spec: 
-  description: This task will clean up a workspace by deleting all the files
-  workspaces: 
+spec:
+  description: This task will clean up a workspace by deleting all of the files.
+  workspaces:
     - name: source
-  steps: 
+  steps:
     - name: remove
       image: alpine:3
       env:
         - name: WORKSPACE_SOURCE_PATH
           value: $(workspaces.source.path)
       workingDir: $(workspaces.source.path)
-      securityContext: 
+      securityContext:
         runAsNonRoot: false
         runAsUser: 0
       script: |
@@ -31,21 +30,22 @@ spec:
           # Delete files and directories starting with . but excluding ..
           rm -rf "${WORKSPACE_SOURCE_PATH}"/.[!.]*
           # Delete files and directories starting with .. plus any other character
-            rm -rf "${WORKSPACE_SOURCE_PATH}"/..?*
+          rm -rf "${WORKSPACE_SOURCE_PATH}"/..?*
         fi
-
 ---
 apiVersion: tekton.dev/v1beta1
 kind: Task
-metadata: 
+metadata:
   name: nose
 spec:
-  workspaces: 
+  workspaces:
     - name: source
+  params:
+    - name: args
       description: Arguments to pass to nose
       type: string
       default: "-v"
-  steps: 
+  steps:
     - name: nosetests
       image: python:3.9-slim
       workingDir: $(workspaces.source.path)
